--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
         function executeLoop() {
             for(rep = 1; rep <= 10; rep = rep++) {
-                console.log("Lifting weights repetition 1");
+                console.log("GET TROLLED LMAOO 1");
             }
         }
     </script>
