--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Massive Power of Random</title>
 </head>
 <body>
-    <h1>Want to feel massive power of random?</h1>
+    <h1>Want to feel MASSIVE power of random?</h1>
     <button onclick="executeLoop()">YES</button>
     
     <script>
